# mitsu

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.toml
mitsu-site/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
mitsu-site/public/screenshots/: README.md
mitsu-site/src/: App.jsx  index.css
mitsu-site/src/components/: Architecture.jsx  CTA.jsx  Demo.jsx  Features.jsx  Hero.jsx  Market.jsx  Nav.jsx  OpenAI.jsx  Problem.jsx  Revenue.jsx  Roadmap.jsx  TechStack.jsx  WhyMitsu.jsx  Workflow.jsx
mitsu-site/src/hooks/: useScrollReveal.jsx
models/: hand_landmarker.task.sha256
scripts/: bootstrap_hand_model.py
src/mitsu/: __init__.py  app.py  config.py  logging_setup.py  security.py
src/mitsu/cognition/: __init__.py  circuit_breaker.py  cloud_reasoner.py  tool_registry.py  tool_schemas.py
tests/: conftest.py  test_app_monitor_destination.py
tests/cognition/: __init__.py  test_circuit_breaker.py  test_cloud_reasoner.py
tests/config/: test_config.py
tests/control/: test_coordinate_mapper.py  test_drag_runtime.py  test_hit_projector.py  test_kill_switch.py  test_monitor_layout.py  test_mouse_controller.py  test_target_latch.py  test_window_animator.py  test_window_manager.py
tests/gestures/: test_air_click.py  test_fist.py  test_palm_swipe.py  test_pinch.py  test_state_machine.py  test_three_finger_swipe.py  test_v_sign.py  test_velocity.py
tests/observability/: test_metrics.py
tests/perception/: test_one_euro.py
tests/voice/: test_audio_capture.py  test_intent.py  test_service.py
(+32 files in other folders)
