[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mitsu"
version = "0.1.0"
description = "Local hand-and-voice window management for Windows."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Mizunandayo" }]
dependencies = [
  "mediapipe==0.10.35",
  "opencv-python==5.0.0.93",
  "pywin32==312",
  "screeninfo==0.8.1",
  "pydantic==2.13.0",
  "python-dotenv==1.2.0",
  "PySide6==6.11.1",
  "pillow==12.3.0",
  "openai==2.45.0",
]

[dependency-groups]
dev = [
  "pytest==9.1.0",
  "ruff==0.15.0",
  "black==26.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mitsu"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S", "RUF"]
ignore = [
  "S101", # pytest assertions are intentional.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.black]
target-version = ["py311"]
line-length = 88